# Ola-Ollama-Agent

./: .env.example  .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml
ollama_agent/: agent.py  backups.py  config.py  costs.py  main.py  mcp_client.py  sessions.py  voice.py
ollama_agent/rag/: chunker.py  retriever.py  rlm.py  store.py
ollama_agent/tools/: __init__.py  bash.py  files.py  search.py  web.py
